Fixed a bug relating dark mode and removed one console logging

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,6 +11,8 @@
 
   font-size: 18px;
 
+  overflow: scroll;
+
   background-color: $complement;
   color: $base;
 }
