--- a/src/styles/EntryList.scss
+++ b/src/styles/EntryList.scss
@@ -23,6 +23,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 30px;
+    padding-bottom: 310px;
 
     #no-entry {
         color: rgba($color: $base, $alpha: .5);
